hphp/hack/test/typecheck/is_expression/in_lambda.php.exp
File "in_lambda.php", line 5, characters 9-17:
The "is" operator is temporarily banned in lambdas due to a bug in capturing variables in closures (T31174901). If you are not using a captured variable, you may FIXME this error and it will be cleaned up automatically. (Typing[4266])
