hphp/hack/test/typecheck/is_expression/in_lambda.php
<?hh // strict

function f(mixed $x): void {
  $f = () ==> {
    if ($x is int) {
      expect_int($x);
    }
  };
}

function expect_int(int $x): void {}
